update the homeworkfiles

--- a/HW1/PalencharHW1.tex
+++ b/HW1/PalencharHW1.tex
@@ -75,7 +75,11 @@ One knows that $x \text{ and } y$ can be any number in $\mathbb{Z}$.
 One can now make $x=10$ and $y=-23$ as both $10$ and $-23$ are integers this shows that $1 \in D$\\
 \\\underline{ANSWER (B)}\\
 \\ Let one take $7x + 3y : x,y \in \mathbb{Z}$. Suppose that $7x+3y = a$ where $a\in \mathbb{Z}$.
-from this one can find a function $f(x)$ such that $f(x) = 7x+3(-2x)$ where $x \in \mathbb{Z}$.
-The range of this function $f(x)$ is $\mathbb{Z}$ when the domain is $\mathbb{Z}$.
+from this one can define a function  $f(x) = 7x+3(-2x)$ where $x \in \mathbb{Z}$.
+The range of this function is $\mathbb{Z}$ when the domain is $\mathbb{Z}$.
+From this it can be said that $D = \mathbb{Z}$
+\begin{flushright}
+        $\Box$
+\end{flushright}
 
 \end{document}
