update and add notes from class

--- a/notes/Notes.tex
+++ b/notes/Notes.tex
@@ -82,4 +82,14 @@ $F_{n-1} <2^{n-1} $ $f_{n-2} < 2^{n-2} $
         $\Box$
 \end{flushright}
 
+other proof for same problem 
+
+\underbar{Proof.}\\
+BWOC lest n be smallest n such that $F_n >= 2^n$
+check that $n != 0$ and $n!= 1$
+It has to be that $F_n = F_{n-1}+F_{n-2}<n^{n-1}+2^{n-2}\dots < 2^n$
+This is a contradiction with the initial assumption on $n$.
+\begin{flushright}
+        $\Box$
+\end{flushright}
 \end{document}
